Style: classic green chess board colors

--- a/css/style.css
+++ b/css/style.css
@@ -216,11 +216,11 @@ main {
 }
 
 #board .white-1e1d7 {
-    background: #e8dcb5 !important;
+    background: #779556 !important;
 }
 
 #board .black-3c85d {
-    background: #e8dcb5 !important;
+    background: #ebecd0 !important;
 }
 
 #board img {
