Style: chess board colors A77F5B/EBD5AF

--- a/css/style.css
+++ b/css/style.css
@@ -216,11 +216,11 @@ main {
 }
 
 #board .white-1e1d7 {
-    background: #779556 !important;
+    background: #EBD5AF !important;
 }
 
 #board .black-3c85d {
-    background: #ebecd0 !important;
+    background: #A77F5B !important;
 }
 
 #board img {
